--- a/oblig1/style.css
+++ b/oblig1/style.css
@@ -1,10 +1,30 @@
+body{
+    background-color:white;
+}
+
 h1{
     color: red;
     text-align: center;
 }
 
-#back{
+h2{
+    text-align: center;
+    font-family: 'Times New Roman', Times, serif;
+}
+p{
+    text-align: center;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: larger;
+}
+
+#back{ /*dette er en kode for å fiske slik at tilbake knappen er øverst til venstre ved hjelp av ID*/
     text-align: right;
     color: blue;
 }
 
+
+.center{
+    display:block;
+    margin-left: auto;
+    margin-right: auto;
+}
