comit etter bildene

--- a/ForsideStyle.css
+++ b/ForsideStyle.css
@@ -7,7 +7,7 @@ h2 {
   font-family: "Courier New", Courier, monospace;
 }
 
-ul {
+.navbar {
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -18,11 +18,11 @@ ul {
   top: 0;
 }
 
-li {
+.navbar-item {
   float: left;
 }
 
-li a {
+.navbar-item a {
   display: block;
   color: white;
   text-align: center;
@@ -30,10 +30,10 @@ li a {
   text-decoration: none;
 }
 
-li a:hover {
+.navbar-item a:hover {
   background-color: #111;
 }
 
-.active {
+.navbar-item .active {
   background-color: #4caf50;
 }
