--- a/ForsideStyle.css
+++ b/ForsideStyle.css
@@ -37,3 +37,12 @@ h2 {
 .navbar-item .active {
   background-color: #4caf50;
 }
+
+
+.main{
+  list-style-type: none;
+}
+
+.second{
+  list-style-type: lower-latin;
+}
