Bare hyggelig Karlsen babe ;)

--- a/nettside/style.css
+++ b/nettside/style.css
@@ -54,9 +54,9 @@ h1 {
 }
 
 
-.kjonn{
+/* .kjonn{
   display: flex;
   align-items: center;
   text-align: center;
   border: 2px solid var(--highlight);
-}
+} */
